--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -3,10 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>首页</title>
-<link rel="stylesheet" type="text/css" media="all" th:href="@{/css/index.css}"/>
-<link rel="stylesheet" type="text/css" media="all" th:href="@{/css/buttons.css}"/>
+<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
+<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+<link rel="stylesheet" type="text/css" th:href="@{/css/buttons.css}"/>
 </head>
 <body>
+	<div><a href="gotoSignIn">登录</a></div>
 	<div style="text-align: center;margin: 10% auto 0 auto;">
 		<label style="font-size: 50px">基于SSM的房屋租赁系统</label>
 	</div>
